// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Block background=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block background=true 1`] = `
<div
  className="uu5-bricks-block uu5-bricks-block-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkGrammar=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkHighlight=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block checkSpaces=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block className="my-classname" 1`] = `
<div
  className="uu5-bricks-block my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block className="test-classname" 1`] = `
<div
  className="uu5-bricks-block test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Block content=12345 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Block controlled=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block controlled=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block default props 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled=false 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block disabled=true 1`] = `
<div
  className="uu5-bricks-block uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Block disabled=true 3`] = `
<div
  className="uu5-bricks-block uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Block dynamic=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block dynamic=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-block uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-block uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden=false 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden=true 1`] = `
<div
  className="uu5-bricks-block uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block hidden=true 3`] = `
<div
  className="uu5-bricks-block uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block id="myId" 1`] = `
<div
  className="uu5-bricks-block"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block id="test-id" 1`] = `
<div
  className="uu5-bricks-block"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block name="myName" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-block uu-bricks-zfudut"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="inline" 3`] = `
<span
  className="uu5-bricks-block uu-bricks-zfudut"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-block uu-bricks-zfudut"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-block uu-bricks-zfudut"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block noPrint=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block noPrint=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block pureRender=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block selected=true 1`] = `
<div
  className="uu5-bricks-block uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block style={"margin":8} 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector=false 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block textCorrector=true 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Block tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-block"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
